// file: organization/proto/messages/domain_config.proto
// version: 1.0.0
// guid: ee8bb6b4-f822-496b-8109-9bd6ffdbdf7b

edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "pkg/organization/proto/dns_config.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message DomainConfig {
  // Custom domain name
  string domain_name = 1;

  // SSL certificate ARN or ID
  string ssl_certificate = 2;

  // DNS configuration
  DNSConfig dns = 3;

  // Domain validation status
  string validation_status = 4;
}
